--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sample typsecript application",
   "main": "dist/app.js",
   "scripts": {
-    "start": "tsc && node dist/app.js",
+    "start": "rimraf dist && tsc && node dist/app.js",
     "start:watch": "nodemon ."
   },
   "repository": {
@@ -22,9 +22,13 @@
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
     "tslint": "^5.12.1",
-    "typescript": "^3.3.3"
+    "typescript": "^4.7.3"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "@types/mqtt": "^2.5.0",
+    "azure-iothub": "^1.15.0",
+    "express": "^4.16.4",
+    "mqtt": "^4.3.7",
+    "rimraf": "^3.0.2"
   }
 }
